# reddit-majority-opinion

./: .gitignore  README.md  pyproject.toml
src/: alessio.py  entropy_class.py  main.py  posts_ids.txt  regression.ipynb  tendims_analysis.py  test.py  test2.ipynb  utils.py
src/alessio/: bayesian.Rmd  confused_users.ipynb  confused_users.py  plot_entropy.py  statistics.py  topics.py
src/alessio/R/: bayesian_reddit.nb.html
src/alessio/mformer/: data_preparation.py  mformer.py
